fix/cor do icone do github com contraste ruim em relação ao fundo

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -226,6 +226,10 @@ nav ul li a {
   width: 50px;
 }
 
+.git {
+  filter: invert(1);
+}
+
 /* -- SKILLS LEFT SIDE -- */
 .default-skill {
   text-align: center;
